--- a/applications/common/frontend/src/components/ContactForm/ContactForm.scss
+++ b/applications/common/frontend/src/components/ContactForm/ContactForm.scss
@@ -16,10 +16,65 @@
  * -->
  */
 
+
 .contact-form-header {
   font-size: 1.125rem;
   line-height: 1.33;
   font-weight: var(--kyanite-weight-bold);
 
   margin-bottom: 1rem;
+}
+
+.contact-form {
+
+  //  form initial state and defaults
+
+  .submit-message-type {
+    display: none;
+
+    text-align: center;
+
+    .submit-result {
+      display: none;
+
+      margin-bottom: 2rem;
+
+      .submit-result-header {
+        margin-bottom: 1rem;
+      }
+    }
+  }
+
+  //  submit messages visibility depending on result message type
+
+  &.form-submitted {
+
+    &[submit-message-type="default"] {
+      .submit-message-default {
+        display: block;
+      }
+    }
+
+    &[submit-message-type="alternative"] {
+      .submit-message-alternative {
+        display: block;
+      }
+
+      .field {
+        display: none;
+      }
+    }
+
+    &.form-success {
+      .submit-result.form-success {
+        display: block;
+      }
+    }
+
+    &.form-failure {
+      .submit-result.form-failure {
+        display: block;
+      }
+    }
+  }
 }
