KYAN-277 make ContactForm fields and ThankYou message transparent

--- a/applications/common/frontend/src/components/ContactForm/ContactForm.scss
+++ b/applications/common/frontend/src/components/ContactForm/ContactForm.scss
@@ -77,4 +77,10 @@
       }
     }
   }
+
+  //  Bulma override
+
+  .input, .select select, .notification {
+    background-color: transparent;
+  }
 }
