Feature/KYAN-277 contact form result message (#502)
* KYAN-269 update ContactForm fieldSet

* KYAN-269 add log message for ContactForm out of PageSpace context

* KYAN-277 change ContactForm success/error colors

* KYAN-277 add Thank You message option to Contact Form

* KYAN-277 show error message in edit mode when Contact Form has no inquiry types

* KYAN-277 make ContactForm fields and ThankYou message transparent

* KYAN-277 add customizable buttons for Contact Form submit result (Thank You message)

* KYAN-277 extract Contact Form submit message to a template + adjust styling

* KYAN-277 show contact form error when recaptcha is missing

* KYAN-277 minor contact form changes due to review

--- a/applications/common/frontend/src/components/ContactForm/ContactForm.scss
+++ b/applications/common/frontend/src/components/ContactForm/ContactForm.scss
@@ -16,10 +16,75 @@
  * -->
  */
 
+
 .contact-form-header {
-  font-size: 1.125rem;
-  line-height: 1.33;
+  font-size: 1.5rem;
+  line-height: 1.5;
   font-weight: var(--kyanite-weight-bold);
 
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.contact-form {
+
+  //  form initial state and defaults
+
+  .submit-message-type {
+    display: none;
+
+    text-align: center;
+
+    .submit-result {
+      display: none;
+
+      > *:not(:last-child) {
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+
+  //  submit messages visibility depending on result message type
+
+  &.form-submitted {
+
+    &[submit-message-type="default"] {
+      .submit-message-default {
+        display: block;
+      }
+    }
+
+    &[submit-message-type="alternative"] {
+      .submit-message-alternative {
+        display: block;
+      }
+
+      .form-decorative-element, .field {
+        display: none;
+      }
+    }
+
+    &.form-success {
+      .submit-result.form-success {
+        display: block;
+      }
+    }
+
+    &.form-failure {
+      .submit-result.form-failure {
+        display: block;
+      }
+    }
+  }
+
+  //  Bulma override
+
+  .notification.submit-message-type {
+    background-color: transparent;
+  }
+
+  .field {
+    .input, .select select {
+      background-color: transparent;
+    }
+  }
 }
