--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -16,105 +16,143 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.kyanite.common.components.models.ContactFormComponent">
-  <h5 data-sly-test.formHeader="${model.formHeader}"
-      class="contact-form-header">${formHeader}</h5>
-  <form class="contact-form"
-        data-config-captcha-public-key='${model.captchaPublicKey}'
-        data-config-http-end-point='${model.configEndpoint}'>
+<sly data-sly-use.model="pl.ds.kyanite.common.components.models.ContactFormComponent"
+     data-sly-set.types="${model.types}">
+  <sly data-sly-test.typesAreProvided="${types.size > 0}">
+    <form class="contact-form"
+          data-sly-attribute.submit-message-type="${model.showAlternativeSubmitMessage ? 'alternative' : 'default'}"
+          data-config-captcha-public-key='${model.captchaPublicKey}'
+          data-config-http-end-point='${model.configEndpoint}'>
 
-    <div data-sly-set.types="${model.types}"
-         data-sly-attribute.hidden="${types.size < 2}"
-         class="field">
-      <div class="control">
-        <div class="select">
-          <select required
-                  name="type"
-                  aria-label="Type of inquiry">
-            <option disabled value
-                    data-sly-attribute.selected="${types.size != 1}">Select an option</option>
-            <sly data-sly-list.item="${model.types}">
-              <option
-                  data-sly-attribute.selected="${types.size == 1}"
-                  data-value-part1="${item.mailParts[0]}"
-                  data-value-part2="${item.mailParts[1]}"
-                  data-value-part3="${item.mailParts[2]}"
-                  value="${item.label}">${item.label}</option>
-            </sly>
-          </select>
+      <h3 data-sly-test.formHeader="${model.formHeader}"
+          class="contact-form-header form-decorative-element">${formHeader}</h3>
+
+      <div data-sly-attribute.hidden="${types.size < 2}"
+           class="field">
+        <div class="control">
+          <div class="select">
+            <select required
+                    name="type"
+                    aria-label="Type of inquiry">
+              <option disabled value
+                      data-sly-attribute.selected="${types.size != 1}">Select an option
+              </option>
+              <sly data-sly-list.item="${types}">
+                <option
+                    data-sly-attribute.selected="${types.size == 1}"
+                    data-value-part1="${item.mailParts[0]}"
+                    data-value-part2="${item.mailParts[1]}"
+                    data-value-part3="${item.mailParts[2]}"
+                    value="${item.label}">${item.label}
+                </option>
+              </sly>
+            </select>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control">
-        <input class="input" type="text" name="firstName" placeholder="First Name*" required>
+      <div class="field">
+        <div class="control">
+          <input class="input" type="text" name="firstName" placeholder="First Name*" required>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control">
-        <input class="input" type="text" name="lastName" placeholder="Last Name*" required>
+      <div class="field">
+        <div class="control">
+          <input class="input" type="text" name="lastName" placeholder="Last Name*" required>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control has-icons-left">
-        <input class="input email-input" type="email" name="email" placeholder="Your working email*" required>
-        <span class="icon is-small is-left">
+      <div class="field">
+        <div class="control has-icons-left">
+          <input class="input email-input" type="email" name="email"
+                 placeholder="Your working email*" required>
+          <span class="icon is-small is-left">
           <i class="mdi mdi-email"></i>
         </span>
+        </div>
+        <p class="help is-danger is-hidden email-validate-error">This email is invalid</p>
       </div>
-      <p class="help is-danger is-hidden email-validate-error">This email is invalid</p>
-    </div>
 
-    <div class="field">
-      <div class="control">
-        <input class="input" type="text" name="companyName" placeholder="Company Name">
+      <div class="field">
+        <div class="control">
+          <input class="input" type="text" name="companyName" placeholder="Company Name">
+        </div>
       </div>
-    </div>
 
-    <div  data-sly-attribute.hidden="${!properties.showMessage}"
-          class="field">
-      <div class="control">
-        <textarea class="textarea" name="message" placeholder="${model.messagePlaceholder}"></textarea>
+      <div data-sly-attribute.hidden="${!model.showMessage}"
+           class="field">
+        <div class="control">
+          <textarea class="textarea" name="message"
+                    placeholder="${model.messagePlaceholder}"></textarea>
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control">
-        <label class="checkbox is-flex">
-          <input type="checkbox" class="mr-2" required>
-          ${model.consentText @ context='html'}
-        </label>
+      <div class="field">
+        <div class="control">
+          <label class="checkbox is-flex">
+            <input type="checkbox" class="mr-2" required>
+            ${model.consentText @ context='html'}
+          </label>
+        </div>
       </div>
-    </div>
 
-    <div hidden class="field">
-      <div class="control">
-        <input class="input" type="text" name="pageSpace" value="${model.spaceName}">
+      <div hidden class="field">
+        <div class="control">
+          <input class="input" type="text" name="pageSpace" value="${model.spaceName}">
+        </div>
       </div>
-    </div>
 
-    <div hidden class="field">
-      <div class="control">
-        <input class="input" type="text" name="pageName" value="${model.pageName}">
+      <div hidden class="field">
+        <div class="control">
+          <input class="input" type="text" name="pageName" value="${model.pageName}">
+        </div>
       </div>
-    </div>
 
-    <div class="field">
-      <div class="control">
-        <input id="submit-btn" class="button is-primary is-medium" type="submit"
-               value="${model.submitLabel}" data-form-id="${resource.name}">
+      <div class="field">
+        <div class="control">
+          <input id="submit-btn" class="button is-primary is-medium" type="submit"
+                 value="${model.submitLabel}" data-form-id="${resource.name}">
+        </div>
       </div>
+        <sly data-sly-test="${!model.showAlternativeSubmitMessage}">
+
+        <div class="block submit-message-type submit-message-default">
+          <div class="submit-result notification is-danger is-light form-failure mb-0">
+            Something's wrong, try again
+          </div>
+          <div class="submit-result notification is-success is-light form-success">
+            Form submitted successfully
+          </div>
+        </div>
+      </sly>
+      <section data-sly-test="${model.showAlternativeSubmitMessage}"
+               class="block notification submit-message-type submit-message-alternative">
+        <div class="submit-result form-success">
+          <sly data-sly-use.template="./templates/submitmessage.html"
+               data-sly-call="${template.submitmessage @
+                                headerText='Thank you for your request!',
+                                messageText=model.alternativeSuccessMessage,
+                                buttonLink=model.alternativeSuccessButtonLink,
+                                buttonLabel=model.alternativeSuccessButtonLabel,
+                                openInNewWindow=!model.isAlternativeSuccessButtonLinkInternal}"></sly>
+        </div>
+
+        <div class="submit-result form-failure">
+          <sly data-sly-use.template="./templates/submitmessage.html"
+               data-sly-call="${template.submitmessage @
+                                headerText='Oops! Something didn’t go as planned.',
+                                messageText=model.alternativeFailureMessage,
+                                buttonLink=model.alternativeFailureButtonLink,
+                                buttonLabel=model.alternativeFailureButtonLabel,
+                                openInNewWindow=!model.isAlternativeFailureButtonLinkInternal}"></sly>
+        </div>
+      </section>
+    </form>
+  </sly>
+  <sly data-sly-test="${wcmmode.isEdit && !typesAreProvided}">
+    <div>
+      <span class="has-text-danger">Provide at least one inquiry type</span>
     </div>
-    <div class="block">
-      <div class="notification is-danger is-hidden form-failure mb-0">
-        Something's wrong, try again
-      </div>
-      <div class="notification is-success is-hidden form-success">
-        Form submitted successfully
-      </div>
-    </div>
-  </form>
+  </sly>
 </sly>
