KYAN-286 update ContactForm style due to remarks after testing on staging

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -64,11 +64,9 @@
       </div>
 
       <div class="field">
-        <div class="control has-icons-left">
+        <div class="control">
           <input class="input email-input" type="email" name="email"
                  placeholder="Your working email*" required>
-          <span class="icon is-small is-left">
-          <i class="mdi mdi-email"></i>
         </span>
         </div>
         <p class="help is-danger is-hidden email-validate-error">This email is invalid</p>
@@ -111,7 +109,7 @@
 
       <div class="field">
         <div class="control">
-          <input id="submit-btn" class="button is-primary is-medium" type="submit"
+          <input id="submit-btn" class="button is-primary is-small" type="submit"
                  value="${model.submitLabel}" data-form-id="${resource.name}">
         </div>
       </div>
