--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/templates/submitmessage.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/templates/submitmessage.html
@@ -29,7 +29,7 @@
       <span>${buttonLabel}</span>
     </a>
     <input data-sly-test="${!buttonLink}"
-           class="button after-submit-button is-primary is-medium" type="button"
+           class="button after-submit-button is-primary is-small" type="button"
            value="${buttonLabel}">
   </div>
 </template>
