--- a/applications/common/frontend/src/components/ContactForm/ContactForm.scss
+++ b/applications/common/frontend/src/components/ContactForm/ContactForm.scss
@@ -83,7 +83,7 @@
   }
 
   .field {
-    .input, .select select {
+    textarea, .input, .select select {
       background-color: transparent;
     }
   }
