--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/button/button.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/button/button.html
@@ -17,34 +17,22 @@
 */-->
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.ButtonComponent">
     <sly data-sly-test="${model.type == 'button'}">
-        <sly data-sly-test.disabled="${model.isDisabled}">
-            <button class="button ${model.buttonClasses @ join=' '}" disabled
-                    aria-label="${model.hideLabel ? model.label : ''}">
-                <sly data-sly-use.template="./template.html"
-                     data-sly-call="${template.buttonContent @ model = model}"></sly>
-            </button>
-        </sly>
-        <sly data-sly-test="${!disabled}">
-            <sly data-sly-test="${model.actionType == 'open-modal'}">
-                <button class="button js-modal-trigger ${model.buttonClasses @ join=' '}"
-                        data-target="${model.modalId}"
-                        aria-label="${model.hideLabel ? model.label : ''}">
-                    <sly data-sly-use.template="./template.html"
-                         data-sly-call="${template.buttonContent @ model = model}"></sly>
-                </button>
-            </sly>
-
-            <sly data-sly-test="${model.actionType != 'open-modal'}">
-                <button class="button ${model.buttonClasses @ join=' '}"
-                        aria-label="${model.hideLabel ? model.label : ''}">
-                    <sly data-sly-use.template="./template.html"
-                         data-sly-call="${template.buttonContent @ model = model}"></sly>
-                </button>
-            </sly>
-        </sly>
+        <sly data-sly-set.isDisabled="${model.isDisabled}"
+             data-sly-set.isModal="${!isDisabled && (model.actionType == 'open-modal')}"></sly>
+        <button class="button ${model.buttonClasses @ join=' '}
+                       ${isModal ? 'js-modal-trigger' : ''}"
+                id="${model.buttonId}"
+                data-sly-attribute.data-target="${isModal ? model.modalId : ''}"
+                data-sly-attribute.disabled="${isDisabled}"
+                aria-label="${model.hideLabel ? model.label : ''}">
+            <sly data-sly-use.template="./template.html"
+                 data-sly-call="${template.buttonContent @ model = model}"></sly>
+        </button>
     </sly>
     <sly data-sly-test="${model.type == 'a'}">
-        <a href="${model.url}" data-part1="${model.mailPart1}" data-part2="${model.mailPart2}" data-part3="${model.mailPart3}"  class="button ${model.buttonClasses @ join=' '}"
+        <a href="${model.url}" data-part1="${model.mailPart1}" data-part2="${model.mailPart2}" data-part3="${model.mailPart3}"
+           class="button ${model.buttonClasses @ join=' '}"
+           id="${model.buttonId}"
            target="${model.openInNewTab && model.url != '' ? '_blank' : ''}"
            aria-label="${model.hideLabel ? model.label : ''}">
             <sly data-sly-use.template="./template.html"
