KYAN-293 detect duplicated ids on the page

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -73,6 +73,7 @@
 <script defer data-sly-test="${wcmmode.isDisabled && project.version}" src="/libs/kyanite/webroot/${project.version}/main.js"></script>
 <script defer data-sly-test="${wcmmode.isDisabled && !project.version}" src="/libs/kyanite/webroot/main.js"></script>
 <script defer data-sly-test="${!wcmmode.isDisabled}" src="/libs/kyanite/webroot/main.js"></script>
+<script defer data-sly-test="${wcmmode.isEdit}" src="/libs/kyanite/author/author.js"></script>
 
 <script defer data-sly-test="${wcmmode.isDisabled && project.version}" src="/libs/kyanite/webroot/${project.version}/main.published.js"></script>
 <script defer data-sly-test="${wcmmode.isDisabled && !project.version}" src="/libs/kyanite/webroot/main.published.js"></script>
