KYAN-289 adjust Content font for XS and 2XS sizes

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -36,7 +36,13 @@
     color: unset;
   }
 
+  &-2xs {
+    line-height: var(--line-height-140);
+    font-size: var(--font-size-10);
+  }
+
   &-xs {
+    line-height: var(--line-height-150);
     font-size: var(--font-size-12);
   }
 
