WSIO-1295 fix navbar hover issue

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -148,6 +148,7 @@
     padding-bottom: var(--spacing-4);
 
     flex-shrink: 1;
+    height: 100%;
 
     @include breakpoint.media-breakpoint-large {
       flex-wrap: wrap;
