--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -148,7 +148,9 @@
     padding-bottom: var(--spacing-4);
 
     flex-shrink: 1;
-    height: 100%;
+    &:not(.has-navbar-top) {
+      height: 100%;
+    }
 
     @include breakpoint.media-breakpoint-large {
       flex-wrap: wrap;
