--- a/applications/common/frontend/src/components/index.scss
+++ b/applications/common/frontend/src/components/index.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2023 Dynamic Solutions
+ *     Copyright (C) 2025 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -49,3 +49,4 @@
 @use './Section';
 @use './Separator';
 @use './Table';
+@use './Accordion';
