--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -18,25 +18,13 @@
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.PageHeadLibsComponent"></sly>
 <sly data-sly-test="${wcmmode.isDisabled}">
-  <!-- Google Tag Manager -->
-  <script data-sly-test="${model.hasAnalyticsUrl}">
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments)}
-    gtag('consent', 'default', {
-      'ad_storage': 'denied',
-      'analytics_storage': 'denied',
-      'personalization_storage': 'denied',
-      'functionality_storage': 'denied',
-      'security_storage': 'denied',
-      'ad_user_data': 'denied',
-      'ad_personalization': 'denied',
-    });
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.defer=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','${model.googleAnalyticsTrackingId @ context="text"}');</script>
-  <!-- End Google Tag Manager -->
+<!-- Google Tag Manager -->
+<script data-sly-test="${model.hasAnalyticsUrl}">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.defer=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','${model.googleAnalyticsTrackingId @ context="text"}');</script>
+<!-- End Google Tag Manager -->
 </sly>
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
