Revert "KYAN-299 Improve video component with YT IFrame API (#515)"
This reverts commit 34fe72f2b72f0092ad5e0fad2c48ddce1c50df51.

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/video/video.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/video/video.html
@@ -35,13 +35,14 @@
         <img class="iframe-thumbnail" src="${model.thumbnail}" alt="Thumbnail image">
       </sly>
       <sly data-sly-test.link="${[model.src,model.shareLinkParameters] @ join = '?'}"></sly>
-      <iframe id="${model.youtubeIframeId}"
-              class="${model.trackInteractions ? 'player-with-cookies' : 'player'}"
+      <iframe id="player"
               width="${model.width || '100%' @ context='scriptString'}"
               height="${model.height || 390 @ context='scriptString'}"
               src="${link}"
               title="Video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
       ></iframe>
     </sly>
   </div>
