KYAN-326 Add fetchpriority to image related components (#527)
* KYAN-326 Add fetchpriority to image related components

* KYAN-326 Add Groovy script

* KYAN-326 Apply suggestions

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/template.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/template.html
@@ -24,7 +24,8 @@
         <source media="(max-width:1023px)" srcset="${model.tabletAssetReference @ context='uri'}"/>
       </sly>
 
-      <img src="${model.image.assetReference}" width="${model.image.width}" height="${model.image.height}" alt="${model.image.alt}" loading="lazy" />
+      <img src="${model.image.assetReference}" width="${model.image.width}" height="${model.image.height}" alt="${model.image.alt}"
+           loading="${model.loadingMode}" fetchpriority="${model.fetchPriority}"/>
     </picture>
   </figure>
 </template>
